// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post a Job page matches snapshot - Control 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-root-8 makeStyles-icon-2"
        focusable="false"
        viewBox="0 0 64 64"
      >
        <path
          d="M32 58.7a26.67 26.67 0 1116.25-5.52A26.67 26.67 0 0132 58.7zm-.06-50.58a23.86 23.86 0 103.15.2 25.62 25.62 0 00-3.15-.2z"
          fill="#00a878"
        />
        <path
          d="M28.52 40.18a1.14 1.14 0 01-.86-.39L21.59 33a1.17 1.17 0 011.74-1.55l5.21 5.85 12.13-13.09a1.16 1.16 0 011.71 1.58l-13 14a1.15 1.15 0 01-.86.39z"
          fill="#00a878"
        />
        <path
          d="M28.52 40.55a1.54 1.54 0 01-1.15-.55l-6.06-6.81a1.53 1.53 0 01-.38-1.1 1.49 1.49 0 01.51-1.06 1.53 1.53 0 012.16.12l4.94 5.55L40.4 24a1.51 1.51 0 011.07-.49A1.53 1.53 0 0142.65 26l-13 14a1.55 1.55 0 01-1.13.55zm-6.06-9.13a.81.81 0 00-.53.2.78.78 0 00-.26.55.76.76 0 00.2.57l6.06 6.81a.79.79 0 00.58.26.79.79 0 00.58-.25l13-14a.79.79 0 000-1.12.76.76 0 00-.57-.22.8.8 0 00-.55.26L28.53 37.84l-5.48-6.15a.76.76 0 00-.59-.27z"
          fill="#00a878"
        />
      </svg>
    </div>
    <div
      class="MuiGrid-root makeStyles-header-6 makeStyles-header-7 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h2
        class="MuiTypography-root makeStyles-header-9 MuiTypography-h2"
      >
        Your account has been created!
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root makeStyles-bodyText-3 MuiTypography-body2"
      >
        Now, share a bit more about your schedule and needs in a job post to help you quickly match with caregivers.
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4"
      >
        What type of care are you looking for?
      </h4>
    </div>
    <div
      class="MuiGrid-root makeStyles-typeContainer-4 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <ul
        class="MuiList-root makeStyles-selector-1 MuiList-padding"
      >
        <li
          class="MuiListItem-root makeStyles-root-11 pill MuiListItem-gutters"
        >
          <input
            class="makeStyles-input-14"
            id="selector.undefined.0"
            name=""
            readonly=""
            type="radio"
            value="recurring"
          />
          <div
            class="makeStyles-controlIndicator-15 md"
            tabindex="0"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center"
            >
              <div>
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Recurring
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          class="MuiListItem-root makeStyles-root-11 pill MuiListItem-gutters"
        >
          <input
            class="makeStyles-input-14"
            id="selector.undefined.1"
            name=""
            readonly=""
            type="radio"
            value="onetime"
          />
          <div
            class="makeStyles-controlIndicator-15 md"
            tabindex="0"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center"
            >
              <div>
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  One-time
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          class="MuiListItem-root makeStyles-root-11 pill MuiListItem-gutters"
        >
          <input
            class="makeStyles-input-14"
            id="selector.undefined.2"
            name=""
            readonly=""
            type="radio"
            value="livein"
          />
          <div
            class="makeStyles-controlIndicator-15 md"
            tabindex="0"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center"
            >
              <div>
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Live-in
                </p>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <div
        class="makeStyles-buttonContainer-5"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled MuiButton-fullWidth Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Next
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Post a Job page matches snapshot - Variation 1 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-root-44 makeStyles-icon-38"
        focusable="false"
        viewBox="0 0 64 64"
      >
        <path
          d="M32 58.7a26.67 26.67 0 1116.25-5.52A26.67 26.67 0 0132 58.7zm-.06-50.58a23.86 23.86 0 103.15.2 25.62 25.62 0 00-3.15-.2z"
          fill="#00a878"
        />
        <path
          d="M28.52 40.18a1.14 1.14 0 01-.86-.39L21.59 33a1.17 1.17 0 011.74-1.55l5.21 5.85 12.13-13.09a1.16 1.16 0 011.71 1.58l-13 14a1.15 1.15 0 01-.86.39z"
          fill="#00a878"
        />
        <path
          d="M28.52 40.55a1.54 1.54 0 01-1.15-.55l-6.06-6.81a1.53 1.53 0 01-.38-1.1 1.49 1.49 0 01.51-1.06 1.53 1.53 0 012.16.12l4.94 5.55L40.4 24a1.51 1.51 0 011.07-.49A1.53 1.53 0 0142.65 26l-13 14a1.55 1.55 0 01-1.13.55zm-6.06-9.13a.81.81 0 00-.53.2.78.78 0 00-.26.55.76.76 0 00.2.57l6.06 6.81a.79.79 0 00.58.26.79.79 0 00.58-.25l13-14a.79.79 0 000-1.12.76.76 0 00-.57-.22.8.8 0 00-.55.26L28.53 37.84l-5.48-6.15a.76.76 0 00-.59-.27z"
          fill="#00a878"
        />
      </svg>
    </div>
    <div
      class="MuiGrid-root makeStyles-header-42 makeStyles-header-43 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h2
        class="MuiTypography-root makeStyles-header-45 MuiTypography-h2"
      >
        Your account has been created!
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root makeStyles-bodyText-39 MuiTypography-body2"
      >
        Now, share a bit more about your schedule and needs in a job post to help you quickly match with caregivers.
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4"
      >
        What type of care are you looking for?
      </h4>
    </div>
    <div
      class="MuiGrid-root makeStyles-typeContainer-40 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <ul
        class="MuiList-root makeStyles-selector-37 MuiList-padding"
      >
        <li
          class="MuiListItem-root makeStyles-root-47 pill MuiListItem-gutters"
        >
          <input
            class="makeStyles-input-50"
            id="selector.undefined.0"
            name=""
            readonly=""
            type="radio"
            value="recurring"
          />
          <div
            class="makeStyles-controlIndicator-51 md"
            tabindex="0"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center"
            >
              <div>
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Regular help
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          class="MuiListItem-root makeStyles-root-47 pill MuiListItem-gutters"
        >
          <input
            class="makeStyles-input-50"
            id="selector.undefined.1"
            name=""
            readonly=""
            type="radio"
            value="onetime"
          />
          <div
            class="makeStyles-controlIndicator-51 md"
            tabindex="0"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center"
            >
              <div>
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Single visit
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          class="MuiListItem-root makeStyles-root-47 pill MuiListItem-gutters"
        >
          <input
            class="makeStyles-input-50"
            id="selector.undefined.2"
            name=""
            readonly=""
            type="radio"
            value="livein"
          />
          <div
            class="makeStyles-controlIndicator-51 md"
            tabindex="0"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center"
            >
              <div>
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Live-in
                </p>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <div
        class="makeStyles-buttonContainer-41"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled MuiButton-fullWidth Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Next
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
